manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ca1
  labels:
    app.kubernetes.io/part-of: ca1-checkout
