manifests/12-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: ca1
  labels:
    app: inventory
    app.kubernetes.io/part-of: ca1-checkout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: inventory
          image: ca1/inventory:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-svc
  namespace: ca1
  labels:
    app: inventory
spec:
  selector:
    app: inventory
  ports:
    - port: 80
      targetPort: 3003
