manifests/checkout-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: ca1
  labels:
    app: checkout
spec:
  replicas: 0
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: checkout
          image: ca1/checkout:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 2
            periodSeconds: 2
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-svc
  namespace: ca1
spec:
  selector:
    app: checkout
  ports:
    - port: 80
      targetPort: 3001
